--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/icons-vue": "^6.1.0",
     "animate.css": "^4.1.1",
     "ant-design-vue": "^4.0.0",
     "axios": "^1.4.0",
