--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "animate.css": "^4.1.1",
     "ant-design-vue": "^4.0.0",
     "axios": "^1.4.0",
+    "markdown-it": "^13.0.1",
     "pinia": "^2.1.6",
     "sass": "^1.65.1",
+    "valine": "^1.5.1",
     "vue": "^3.3.4",
     "vue-kinesis": "^2.0.5",
     "vue-router": "^4.2.4",
