--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "animate.css": "^4.1.1",
     "ant-design-vue": "^4.0.0",
     "axios": "^1.4.0",
+    "http-proxy-middleware": "^2.0.6",
     "markdown-it": "^13.0.1",
     "pinia": "^2.1.6",
     "sass": "^1.65.1",
